--- a/windowsterminal/settings.json
+++ b/windowsterminal/settings.json
@@ -213,12 +213,12 @@
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
-                "commandline": "wsl ~",
+                // "commandline": "wsl ~",
                 "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
                 "hidden": false,
                 "name": "Ubuntu-20.04",
                 "source": "Windows.Terminal.Wsl",
-                "startingDirectory": "//wsl$/Ubuntu-20.04/home/ubuntu"
+                "startingDirectory": "/home/ubuntu"
             },
             {
                 "commandline": "cmd.exe",
